ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName34/input.ts.stderr
error: Computed property names are not allowed in enums
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName34/input.ts:4:5
  |
4 |     [e] = id++,
  |     ^^

error: Computed property names are not allowed in enums
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName34/input.ts:5:5
  |
5 |     [e2] = 1
  |     ^^^

